PostGIS 0.9.2cvs
????
  - Leak plugged in dumper
  - fault-tolerant btree ops
  - BUGFIX in rtree index

PostGIS 0.9.1
2004/12/12

- New Things
  - Reverse() function
  - AsSVG() function 
  - New spatial_ref_sys table
  - Optional third argument for Buffer()
- Bug Fixes
  - shp2pgsql DBF handling small fixes
  

PostGIS 0.9.0
2004/09/10

- New Things
  - GEOMETRY_COLUMNS management functions
    - fix_geometry_columns(), probe_geometry_columns()
  - Support for PgSQL 8.0 / Support for Win32
  - Support for GEOS 2.0
- Bug Fixes
  - Schema support in shp2pgsql/pgsql2shp improved
  - Spatial index estimator improved
  - Build system streamlined


PostGIS 0.8.2
2004/05/27

- New Things
  - PgSQL 7.5 Support
  - Integrated PgSQL 7.5 statistics rathering
  - Improved schema support
  - Optional experimental lightweight geometries (LWGEOM)
    - Faster performance
    - Lower disk usage
  - Multi() function to create MULTI* geometries
  - line_interpolate_point() function for linear referencing
- Bug Fixes
  - Minor memory leaks gone
  - Solaris support cleaner
  - shp2pgsql/pgsql2shp more corner cases fixed
  

PostGIS 0.8.1
2004/01/12

- New Things
  - Schema support in AddGeometryColumn and loader/dumper
- Bug Fixes
  - Memory fixes
  - GEOS translation fixes


PostGIS 0.8.0
2003/11/24

- New Things
  - Support for PostgreSQL 7.4
  - Support for all OpenGIS SFSQL functions (requires GEOS)
    - Contains()
    - Within()
    - GeomUnion()
    - Intersection()
    - Buffer()
    - and many more...!
  - Includes OpenGIS conformance tests
  - Passes all OpenGIS conformance tests
  - Spatial aggregate functions
    - GeomUnion() 
    - Collect()
- Bug Fixes
  - shp2pgsql/pgsql2shp
    - Numerous special cases in rings and 
      attributes repaired
  - Some OpenGIS conformance changes


PostGIS 0.7.5
2003/04/08

- Bug Fixes
  - shp2pgsql 
    - Z coordinate handling
    - M coordinate handling
    - Ring handling fixed in some cases