@@ -1,5 +1,6 @@
 PostGIS 0.9.2cvs
 ????
+  - BUGFIX in dumper and GeomFromWKB to support 64bit archs
   - Leak plugged in dumper
   - fault-tolerant btree ops
   - BUGFIX in rtree index
